--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DEBUG=True
-SECRET_KEY=S3cr3t_K#Key
+SECRET_KEY='django-insecure-#4$gu+*w)!tnyja2bb-#1=+gw=636m*4y73a31e1yoqx)jcq@o' #S3cr3t_K#Key
 SERVER=django-argon-dashboard-pro.appseed-srv1.com
