--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,12 @@
-asgiref==3.4.1
-autopep8==1.5.7
 dj-database-url==0.5.0
-Django
+Django==4.2
 gunicorn==20.1.0
 pycodestyle==2.7.0
 python-decouple==3.4
-pytz==2021.1
-sqlparse==0.4.2
-toml==0.10.2
-Unipath==1.1
 whitenoise==5.3.0
-pillow
-mysqlclient
-psycopg2-binary
-reportlab
-qrcode
-djangorestframework
+pillow==10.2.0
+mysqlclient==2.2.4
+psycopg2-binary==2.9.9
+reportlab==4.1.0
+qrcode==7.4.2
+djangorestframework==3.15.1
