--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,8 @@ media/*
 /data
 /*.sqlite*
 
-# Ignore files for docker prod
-Dockerfile
-manage.py
-docker-compose.yml
-requirements.txt
+# # Ignore files for docker prod
+# Dockerfile
+# manage.py
+# docker-compose.yml
+# requirements.txt
