change the docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       args:
         - DEV=true
     volumes:
-      - ./:/app
+      # - ./:/app
       - ./mydatabase.sqlite:/app/mydatabase.sqlite
       - ./data:/app/data
     ports:
