--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ python-decouple==3.4
 whitenoise==5.3.0
 pillow==10.2.0
 # mysqlclient==2.2.4
+num2words==0.5.13
 psycopg2-binary==2.9.9
 reportlab==4.1.0
 qrcode==7.4.2
