--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,31 @@ services:
       args:
         - DEV=true
     volumes:
-      # - ./:/app
-      - ./mydatabase.sqlite:/app/mydatabase.sqlite
-      - ./data:/app/data
+      - ./:/app
     ports:
       - 8004:8004
+    env_file:
+      - ./env/backend.env
     command: >
       sh -c "python manage.py migrate &&
             python manage.py runserver 0.0.0.0:8004"
- 
+  
+  db:
+    image: postgres:14.1-alpine
+    restart: unless-stopped
+    container_name: workpermit-declaration-db
+    env_file:
+      - ./env/db.env
+    ports:
+      - '54320:5432'
+    volumes: 
+      - workpermit_declaration_db:/var/lib/postgresql/data
+  
+  maildev:
+    image: maildev/maildev
+    ports:
+      - "1080:1080"
+      - "1025:1025"
+
+volumes:
+  workpermit_declaration_db:
