--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
     command: >
       sh -c "python manage.py migrate &&
             python manage.py runserver 0.0.0.0:8004"
+    depends_on:
+      - db
+      - maildev
+      - minio
   
   db:
     image: postgres:14.1-alpine
@@ -31,6 +35,24 @@ services:
     ports:
       - "1080:1080"
       - "1025:1025"
+  minio:
+    hostname: minio
+    image: quay.io/minio/minio
+    container_name: minio-trans
+    command: server /data --console-address :9001
+    environment:
+        MINIO_ROOT_USER: minio
+        MINIO_ROOT_PASSWORD: minio123
+    healthcheck:
+        test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+        interval: 30s
+        timeout: 20s
+        retries: 3
+    volumes:
+        - ./storage/data:/data
+    ports:
+        - "9000:9000"
+        - "9001:9001"
 
 volumes:
   workpermit_declaration_db:
