--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+boto3==1.28.78
 dj-database-url==0.5.0
 Django==4.2
 gunicorn==20.1.0
@@ -7,6 +8,7 @@ whitenoise==5.3.0
 pillow==10.2.0
 # mysqlclient==2.2.4
 num2words==0.5.13
+django-storages==1.14.2
 psycopg2-binary==2.9.9
 reportlab==4.1.0
 qrcode==7.4.2
