--- a/dc-prod.yml
+++ b/dc-prod.yml
@@ -11,7 +11,7 @@ services:
       - ./env/backend.test.env
     command: >
       sh -c "python manage.py migrate &&
-            gunicorn --bind 0.0.0.0:8004 core.wsgi:application --workers, 3"
+            gunicorn --bind 0.0.0.0:8004 core.wsgi:application --workers 3"
     depends_on:
       - db
   
