--- a/dc-prod.yml
+++ b/dc-prod.yml
@@ -14,6 +14,8 @@ services:
             gunicorn --bind 0.0.0.0:8004 core.wsgi:application --workers 3"
     depends_on:
       - db
+    volumes:
+      - ./data:/app/data
   
   db:
     image: postgres:17.0-alpine3.20
